--- a/new1.html
+++ b/new1.html
@@ -1,13 +1,21 @@
-var textureLoader = new THREE.TextureLoader();
-var texture = textureLoader.load("stone.jpg");
-var mat = new THREE.MeshPhongMaterial();
-mat.map = texture;
-// バンプマップ読み込み
-var bump = textureLoader.load("stone-bump.jpg");
-mat.bumpMap = bump;
-mat.bumpscale = 0.2;
-// 箱を作成
-var geometry1 = new THREE.BoxGeometry(1, 1, 1);
-var box = new THREE.Mesh(geometry1, mat);
-box.position.set(1.5,0,-5);
-scene.add(box);
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <script src="https://unpkg.com/three@0.137.4/build/three.min.js"></script>
+    <script src="https://unpkg.com/three@0.137.4/examples/js/controls/OrbitControls.js"></script>
+  </head>
+<body>
+ <script> 
+  var textureLoader = new THREE.TextureLoader();
+  var texture = textureLoader.load("stone.jpg");
+  var mat = new THREE.MeshPhongMaterial();
+  mat.map = texture;
+  // バンプマップ読み込み
+  var bump = textureLoader.load("stone-bump.jpg");
+  mat.bumpMap = bump;
+  mat.bumpscale = 0.2;
+  // 箱を作成
+  var geometry1 = new THREE.BoxGeometry(1, 1, 1);
+  var box = new THREE.Mesh(geometry1, mat);
+  box.position.set(1.5,0,-5);
+  scene.add(box);
