--- a/sample7-cit(2).html
+++ b/sample7-cit(2).html
@@ -48,10 +48,15 @@
         scene.add(axisHelper);
 
         // テクスチャー読み込み
-        var textureLoader = new THREE.TextureLoader();  
-        var texture = textureLoader.load("cit.png");
+        var textureLoader = new THREE.TextureLoader();
+        var texture = textureLoader.load("stone.jpg");
         var mat = new THREE.MeshPhongMaterial();
         mat.map = texture;
+        / バンプマップ読み込み
+        var bump = textureLoader.load("stone-bump.jpg");
+        mat.bumpMap = bump;
+        mat.bumpscale = 0.2;
+
 
         // 箱を作成
         var geometry1 = new THREE.BoxGeometry(0.8, 0.8, 0.8);
