--- a/sample7-cit(2).html
+++ b/sample7-cit(2).html
@@ -52,7 +52,8 @@
         var texture = textureLoader.load("stone.jpg");
         var mat = new THREE.MeshPhongMaterial();
         mat.map = texture;
-        / バンプマップ読み込み
+        
+        // バンプマップ読み込み
         var bump = textureLoader.load("stone-bump.jpg");
         mat.bumpMap = bump;
         mat.bumpscale = 0.2;
