--- a/sample7-buil.html
+++ b/sample7-buil.html
@@ -54,7 +54,7 @@
           new THREE.MeshLambertMaterial({map:THREE.ImageUtils.loadTexture("img/img3.png")}),
           new THREE.MeshLambertMaterial({map:THREE.ImageUtils.loadTexture("img/img4.png")}),
           new THREE.MeshLambertMaterial({map:THREE.ImageUtils.loadTexture("img/img_bf.png")}),
-          new THREE.MeshLambertMaterial({map:THREE.ImageUtils.loadTexture("img/img_bb.png")}),
+          new THREE.MeshLambertMaterial({map:THREE.ImageUtils.loadTexture("img/old.buil.jpg")}),
         ];
  
         var material = new THREE.MeshFaceMaterial(materials); // マテリアルをセット
